[RSM add] MAQ v12 layout issues resolved

--- a/bista_website_sale_options/static/src/less/maq_website.ui.component.less
+++ b/bista_website_sale_options/static/src/less/maq_website.ui.component.less
@@ -447,6 +447,17 @@ h5 {
   bottom: 5px;
   text-align: center !important;
 }
+.oe_website_spinner .input-group-addon {
+    background-color: #555555 !important;
+    border:0;
+}
+.oe_product .ribbon-wrapper.active {
+    display: block;
+}
+.oe_website_sale .oe_product .ribbon-wrapper.active .ribbon{
+    left:-18px;
+    top:14px;
+}
 
 /* ======= ADD QUANTITY ========= */
 
