--- a/maq_custom_theme/static/src/css/ubuntu.less
+++ b/maq_custom_theme/static/src/css/ubuntu.less
@@ -2,16 +2,16 @@ body {
     font-size: 16px;
 }
 #wrapwrap {
-    font-family: "Ubuntu-Regular";
+    font-family: "Ubuntu-Regular", Ubuntu;
     h1, h2, h3, h4, h5, h6 {
-        font-family: "Ubuntu-Light";
+        font-family: "Ubuntu-Light", Ubuntu;
     }
     #top_menu > li > a {
-        font-family: "Ubuntu-Regular";
+        font-family: "Ubuntu-Regular", Ubuntu;
     }
     .category-name {
-        font-family: "Ubuntu-Regular";
-        font-size: 20px;
+        font-family: "Ubuntu-Regular", Ubuntu;
+        font-size: 25px;
     }
     .products_pager {
         font-size: 13px;
